Background position and blocker z-index fix.

--- a/static/css/styles.less
+++ b/static/css/styles.less
@@ -228,7 +228,7 @@ body {
       overflow-y: auto;
       -webkit-overflow-scrolling: touch;
       background-image: url(../img/gplaypattern.png);
-      background-position: center;
+      background-position: center top;
 
       .info {
         .absolute();
@@ -243,6 +243,7 @@ body {
 
     #blocker {
       .absolute();
+      z-index: 1;
       display: none;
     }
   }
